# WebpagesGraphDatabase

./: BradLinksVisualizationV1.graphml  README.md  hello.py  pyproject.toml
SecondNotebookFolder/: RestructuredNotebook.ipynb  links_please_review.csv  links_with_metadata.csv
db/graph_db/: .wal  catalog.shadow  metadata.shadow
dockerapp/: Dockerfile  appreadme.md  requirements.txt
dockerapp/app/: main.py
dockerapp/app/db/: kuzu.db  kuzu.db.wal
dockerapp/app/templates/: index.html
notebook/: failed_processing.csv  links_please_review.csv  links_with_content.csv  links_with_metadata.csv  uncategorized_links.csv
notebookversion2/: Edits.ipynb
randomideas/: DataExtraction.ipynb  sythdataideas.ipynb
