[project]
name = "graphplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kuzu>=0.10.0",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "spacy>=3.8.6",
    "torch>=2.7.0",
    "transformers>=4.52.2",
    "yfiles-jupyter-graphs>=1.10.5",
]
