[project]
name = "graphplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kuzu>=0.10.0",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "yfiles-jupyter-graphs>=1.10.5",
]
